--- a/app/javascript/bundles/WanderWattz/components/AppLayouts/Button.module.css
+++ b/app/javascript/bundles/WanderWattz/components/AppLayouts/Button.module.css
@@ -3,10 +3,11 @@
   border: none;
   color: white;
   padding: 15px 32px;
+  margin: 4px auto;
+  width: 40%;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
 }
