--- a/app/javascript/bundles/WanderWattz/components/AppLayouts/PageStructure.module.css
+++ b/app/javascript/bundles/WanderWattz/components/AppLayouts/PageStructure.module.css
@@ -1,4 +1,8 @@
-.body {
-  margin: 0;
-  padding: 0;
+.page_structure {
+  display: flex;         
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
 }
